fix: sidenav-wrapper on mobile is hidden

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,17 @@ html, body {
     color: var(--background-font-color);
 }
 
+@media (max-width: 768px) {
+    #sidenav {
+        display: none !important;
+    }
+    
+}
+
+@media (min-width: 769px) {
+
+}
+
 .img_logo {
     width: 5vh;
     height: 5vh;
